# engine

./: .gitignore  .gitingore  CMakeLists.txt
evaluate/include/: evaluate.h  gamestage.h  positioneval.h  ptstables.h
evaluate/src/: evaluate.cpp  positioneval.cpp
generatemoves/include/: attacks.h  castling.h  generatemoves.h  isgameover.h  lookup.h  magic.h  masks.h  moveorder.h  pawnattacks.h
generatemoves/src/: attacks.cpp  castling.cpp  generatemoves.cpp  isgameover.cpp  pawnattacks.cpp
global/include/: bitboard.h  board.h  generatemovesvar.h  makemove.h  movelist.h
global/src/: bitboard.cpp  board.cpp  generatemovesvar.cpp  makemove.cpp
include/: bestmove.h  initstartposition.h  minimax.h
minimax/include/: minimax.h  qsearch.h
minimax/src/: minimax.cpp  qsearch.cpp
src/: bestmove.cpp  main.cpp  minimax.cpp
tables/include/: attacks.h  lookup.h  magic.h  masks.h  tts.h  zobrist.h
tables/src/: attacks.cpp  masks.cpp  tts.cpp  zobrist.cpp
